--- a/y/style.css
+++ b/y/style.css
@@ -1,12 +1,13 @@
 body #wrap {
     position: absolute;
-    width: 100%;
-    max-width: 500px;
-    height: 600px;
+    width: 95%;
+    max-width: 600px;
+    height: 650px;
     box-shadow: 0 10px 30px -10px rgba(0, 0, 0, 0.25);
     overflow: hidden;
     background: #1161a4;
     font-family: "Josefin Sans";
+
   }
   body #wrap input:hover {
     cursor: pointer;
@@ -148,14 +149,14 @@ body #wrap {
     top: 0;
     left: 0;
     transition: transform 400ms cubic-bezier(1, 0.385, 0.42, 1);
-    background: linear-gradient(to right, #fff 10%, #ffca58 10%);
+    background: linear-gradient(to right, #fff 10%, #f5d388 10%);
   }
   body #wrap .frame:after {
     content: "";
     position: absolute;
     width: 50%;
     height: 100%;
-    background: linear-gradient(to right, #feb339 50%, rgb(0, 0, 88) 50%);
+    background: linear-gradient(to right, #feb339 50%, navy 50%);
     left: 100%;
     transition: transform 400ms cubic-bezier(1, 0.385, 0.42, 1);
   }
@@ -176,7 +177,7 @@ body #wrap {
     left: 0;
     padding: 10% 20%;
   }
-  body #wrap .frame .box .internal .image {
+  /* body #wrap .frame .box .internal .image {
     position: absolute;
     width: 100%;
     height: 50%;
@@ -187,7 +188,7 @@ body #wrap {
     background-position: bottom;
     z-index: -1;
     transition: 4s ease-in-out;
-  }
+  } */
   body #wrap .frame .box .internal .image:before {
     content: "";
     position: absolute;
@@ -221,7 +222,7 @@ body #wrap {
     z-index: 999;
   }
   body #wrap input:nth-of-type(1):hover ~ .nav:nth-of-type(1):before {
-    color: rgb(0, 0, 88);
+    color: navy;
   }
   body #wrap input:nth-of-type(1):checked ~ .nav:nth-of-type(1):before {
     color: #fff;
@@ -1020,7 +1021,7 @@ body #wrap {
     transition-delay: 1.3s;
   }
   body #wrap input:nth-of-type(2):hover ~ .nav:nth-of-type(2):before {
-    color: rgb(0, 0, 88);
+    color: navy;
   }
   body #wrap input:nth-of-type(2):checked ~ .nav:nth-of-type(2):before {
     color: #fff;
@@ -1819,7 +1820,7 @@ body #wrap {
     transition-delay: 1.3s;
   }
   body #wrap input:nth-of-type(3):hover ~ .nav:nth-of-type(3):before {
-    color: rgb(0, 0, 88);
+    color: navy;
   }
   body #wrap input:nth-of-type(3):checked ~ .nav:nth-of-type(3):before {
     color: #fff;
@@ -2664,7 +2665,7 @@ body #wrap {
     transition: all 200ms cubic-bezier(1, 0.885, 0.32, 1);
   }
   body #wrap .indicator {
-    background: #10c8b3;
+    background: #0fa593;
     transition: all 200ms cubic-bezier(1, 0.885, 0.32, 1);
     z-index: 0;
     box-shadow: none;
@@ -2704,10 +2705,10 @@ body #wrap {
     opacity: 0;
   }
   body #wrap .inner .images div:not(.image):nth-of-type(2) .image {
-    background-image: url("https://puu.sh/DdcJi/a10cb7ffc1.jpg");
+    background-image: url("./src/act.jpg");
   }
   body #wrap .inner .images div:not(.image):nth-of-type(3) .image {
-    background-image: url("https://puu.sh/DdcOe/281086cd16.jpg");
+    background-image: url("./src/cheer.jpg");
   }
   body #wrap .inner .images div:not(.image) .image {
     width: 100%;
@@ -2716,7 +2717,7 @@ body #wrap {
     bottom: 0;
     left: 0;
     z-index: -1;
-    background-image: url("https://puu.sh/DdbZq/8577c8d00c.jpg");
+    background-image: url("./src/camp.jpg");
     opacity: 0;
     transform: scale(1.5) rotate(-15deg);
     transition: opacity 1s ease-in-out, transform 2s ease-in-out;
@@ -2751,7 +2752,7 @@ body #wrap {
   body #wrap .inner h1:after {
     content: "";
     position: absolute;
-    box-shadow: inset 0 -2px rgb(0, 0, 88), inset 0 2px rgb(0, 0, 88);
+    box-shadow: inset 0 -2px navy, inset 0 2px navy;
     width: 140%;
     height: 100%;
     left: -20%;
@@ -2768,7 +2769,7 @@ body #wrap {
     height: 100%;
     left: -20%;
     top: 0%;
-    background: rgb(0, 0, 88);
+    background: navy;
     z-index: -1;
     transition: all 300ms cubic-bezier(1, 0.885, 0.32, 1);
     transform: scaleX(0);
@@ -2793,7 +2794,7 @@ body #wrap {
     margin: 2.5% 5%;
     line-height: 1.5;
     color: #333;
-    font-size: 18px;
+    font-size: 22px;
   }
   body .more,
   body .back {
@@ -2823,7 +2824,7 @@ body #wrap {
     position: absolute;
     width: 35px;
     height: 35px;
-    border: 2px solid rgb(0, 0, 88);
+    border: 2px solid rgba(0, 0, 0, 0.85);
     border-radius: 100%;
     z-index: -1;
     left: calc(60% - 20px);
